--- a/trends.html
+++ b/trends.html
@@ -33,11 +33,11 @@ text.x-axis-label { font-size: 12px; }
 A different presentation of the same data as on
 <a href="xray.html">the main page</a>.
 <br/>X axis:
- <input type="radio" id="reldate" name="date" value="release"> release
- <input type="radio" id="depdate" name="date" value="deposit"> deposition date
+ <input type="radio" id="depdate" name="date" value="deposit"> deposition
+ <input type="radio" id="reldate" name="date" value="release"> release date
 &nbsp; &nbsp; &nbsp; Y axis:
- <input type="radio" id="abs" name="absolute" value="y"> counts
  <input type="radio" id="rel" name="absolute" value="n"> percentage
+ <input type="radio" id="abs" name="absolute" value="y"> counts
 <h1 id="loading">LOADING DATA...</h1>
 <div id="chart-facility" style="visibility: hidden;">
  <strong>Facility</strong>
@@ -79,6 +79,9 @@ A different presentation of the same data as on
 <script>
 "use strict";
 
+// This is only to avoid a deprecation warning
+dc.config.defaultColors(dc.schemeCategory10);
+
 var facility_chart = dc.selectMenu('#chart-facility');
 var detec_chart = dc.seriesChart('#chart-detec');
 var reduc_chart = dc.seriesChart('#chart-reduc');
@@ -86,10 +89,10 @@ var scaling_chart = dc.seriesChart('#chart-scaling');
 var solution_chart = dc.seriesChart('#chart-solution');
 var refinement_chart = dc.seriesChart('#chart-refinement');
 
-
 var params = window.location.hash.substr(1).split('&');
 var PER_QUARTER = (params.indexOf('quarter') !== -1);
-var DEPOS = (params.indexOf('depos') !== -1);
+// "deposition date" used to be the default, now it's "release date"
+var DEPOS = (params.indexOf('rel') === -1);
 
 var YEARS = [2004, PER_QUARTER ? 2024.125 : 2024.00];
 if (PER_QUARTER) YEARS[1] += 0.125;
@@ -100,7 +103,8 @@ if (DEPOS) { // deposition date
   document.getElementById('reldate').checked = true;
 }
 
-var AS_PERCENT = (params.indexOf('percent') !== -1);
+// "counts" used to be the default, now it's "percentage"
+var AS_PERCENT = (params.indexOf('counts') === -1);
 
 if (AS_PERCENT) {
   document.getElementById('rel').checked = true;
@@ -156,9 +160,9 @@ function setup(json) {
   var DETECT_FULL = ['Not specified', 'CCD', 'Pixel Array Detector',
                      'Image Plate'];
   var REDUC_SOFT = { 'X':'XDS', 'H':'HKL', 'M':'Mosflm', 'd':'d*TREK',
-                     'D':'DIALS', 'O': 'Other', '-':'unknown' };
+                     'D':'DIALS', 'O': 'other', '-':'unknown' };
   var SCALE_SOFT = { 'A':'Aimless', 'S':'SCALA', 'H':'HKL', 'X':'XSCALE',
-                     'd':'d*TREK', 'O': 'Other', '-':'unknown' };
+                     'd':'d*TREK', 'D': 'DIALS', 'O': 'other/mix', '-':'unknown' };
   var REF_SOFT = { 'R':'Refmac', 'P':'Phenix', 'B':'BUSTER', 'C': 'CNS',
                    '-':'other/mix' };
   var STRUCT_SOL = ['known structure', 'MR', 'SAD', 'MAD', 'MIR/SIR',
@@ -261,6 +265,9 @@ function setup(json) {
 
   setup_plot(refinement_chart, ref_dim)
     .seriesAccessor(function(p) { return REF_SOFT[String.fromCharCode(p.key >> 16)]; });
+
+  // this matches similar items by color between REDUC_SOFT and SCALE_SOFT
+  reduc_chart.colors(d3.scaleOrdinal(d3.schemeCategory10.slice(1)));
 
   var plots = [detec_chart, solution_chart, reduc_chart, scaling_chart, refinement_chart];
   function set_x_axis_labels() {
